--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-"This is Eugene Leung's Website" 
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Eugene Leung's Personal Website</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<!-- <div id="overlay"></div> -->
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Hi, my name is Eugene </h1>
+						<img src="profile.JPG" id="profile_img" alt="profile image" style="border-radius:50%">
+						<p>Software Engineer &nbsp;&bull;&nbsp; Builder &nbsp;&bull;&nbsp; Backpacker</p>
+						<nav>
+							<ul>
+								<li><a href="mailto:leungshgene@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/eugene-sh-leung/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/darkrubber" class="icon fa-github"><span class="label">Github</span></a></li>
+								
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Eugene Leung 2018</span>
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
+</html>
