--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Eugene Leung 2018</span>
+						<span class="copyright">&copy; 2018 Eugene Leung</span>
 					</footer>
 
 			</div>
