--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 								<li><a href="mailto:leungshgene@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/in/eugene-sh-leung/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://github.com/darkrubber" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="http://projectcpp.eugeneleung.me/" class="icon  fa-file-code-o"><span class="label">Projects</span></a></li>
 								
 							</ul>
 						</nav>
